[gd_scene load_steps=4 format=3 uid="uid://dpwu6btvs517q"]

[ext_resource type="Script" uid="uid://clv1c8btuselv" path="res://characters/player/player.gd" id="1_508ok"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_b886q"]
radius = 0.3

[sub_resource type="CapsuleMesh" id="CapsuleMesh_508ok"]
radius = 0.3

[node name="Player" type="CharacterBody3D" groups=["Player"]]
collision_layer = 2
script = ExtResource("1_508ok")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_b886q")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
mesh = SubResource("CapsuleMesh_508ok")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.7, 0)

[node name="LookAtPosition" type="Node3D" parent="Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.4, 0)

[node name="InteractionRaycast" type="RayCast3D" parent="Camera3D"]
target_position = Vector3(0, 0, -2)
collide_with_areas = true

[node name="HUD" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="HUD"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 2

[node name="HBoxContainer" type="HBoxContainer" parent="HUD/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="HUD/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="SearchBar" type="ProgressBar" parent="HUD/VBoxContainer/HBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(300, 25)
layout_mode = 2
max_value = 1.0
step = 0.001
show_percentage = false

[node name="CenterContainer" type="CenterContainer" parent="HUD"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="InteractionLabel" type="Label" parent="HUD/CenterContainer"]
layout_mode = 2
text = "."
